fixed margin issue in about me section for mobile. Possible overflow issue fixed.

--- a/styles/partials/_aboutMe.scss
+++ b/styles/partials/_aboutMe.scss
@@ -91,5 +91,6 @@
     
     .aboutFlexInner {
         width: 100%;
+        margin-left: 20px;
     }
 }
