--- a/styles/styles.css
+++ b/styles/styles.css
@@ -601,6 +601,7 @@ p {
   }
   .aboutFlexInner {
     width: 100%;
+    margin-left: 20px;
   }
 }
 
